Bug 461003 - Cannot remove folders that no longer exist from slideshow wallpaper folder list.
Summary: Cannot remove folders that no longer exist from slideshow wallpaper folder list.
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Image & Slideshow wallpaper plugins (other bugs)
Version First Reported In: master
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-10-25 23:18 UTC by Tim Carr
Modified: 2022-10-27 00:47 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.26.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tim Carr 2022-10-25 23:18:58 UTC
STEPS TO REPRODUCE
1. Create a directory. (Doesn't have to contain images, as this bug works either way)
2. Add that directory as a folder for the slideshow wallpaper to search in.
3. Delete the directory
4. Open the desktop settings panel again, and while the folder still appears in the list (expected) it can no longer be removed from the list using the "-" "Remove Folder" button.

EXPECTED RESULT
Should be able to remove folder paths from the list without having to re-create them in the file system, or having to edit plasma-org.kde.plasma.desktop-appletsrc config to remove the manually.

SOFTWARE/OS VERSIONS

Linux/KDE Plasma: 6.0.2
(available in About System)
KDE Plasma Version: 5.26.1
KDE Frameworks Version: 5.99.0
Qt Version: 5.15.6
Comment 1 Bug Janitor Service 2022-10-26 16:34:59 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/2275
Comment 2 Fushan Wen 2022-10-27 00:45:29 UTC
Git commit a601c5ec4ce166be16a4f0c16ad1a25c45219503 by Fushan Wen.
Committed on 27/10/2022 at 00:45.
Pushed by fusionfuture into branch 'master'.

wallpapers/image: always try to remove a path in `ImageBackend::removeSlidePath`

Checking the returned string from removeDir does not make sense since
the directory may be already removed, so the path will not exist in the
model hashtable.
FIXED-IN: 5.26.3

M  +2    -5    wallpapers/image/plugin/imagebackend.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/a601c5ec4ce166be16a4f0c16ad1a25c45219503
Comment 3 Fushan Wen 2022-10-27 00:47:06 UTC
Git commit 0f6cc02da0db3e3831246fc3665001b8965a5325 by Fushan Wen.
Committed on 27/10/2022 at 00:47.
Pushed by fusionfuture into branch 'Plasma/5.26'.

wallpapers/image: always try to remove a path in `ImageBackend::removeSlidePath`

Checking the returned string from removeDir does not make sense since
the directory may be already removed, so the path will not exist in the
model hashtable.
FIXED-IN: 5.26.3


(cherry picked from commit a601c5ec4ce166be16a4f0c16ad1a25c45219503)

M  +2    -5    wallpapers/image/plugin/imagebackend.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/0f6cc02da0db3e3831246fc3665001b8965a5325