wallpapers/image: always try to remove a path in `ImageBackend::removeSlidePath`

Checking the returned string from removeDir does not make sense since
the directory may be already removed, so the path will not exist in the
model hashtable.

BUG: 461003
FIXED-IN: 5.26.3


(cherry picked from commit a601c5ec4ce166be16a4f0c16ad1a25c45219503)